--- a/Level/AndroidManifest.xml
+++ b/Level/AndroidManifest.xml
@@ -13,12 +13,10 @@
         android:anyDensity="true" />
     
     <uses-sdk 
-        android:minSdkVersion="8" 
-        android:targetSdkVersion="17"/>
+        android:minSdkVersion="9" 
+        android:targetSdkVersion="19"/>
     
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-    
-    <uses-feature android:name="android.hardware.sensor.accelerometer" />
+    <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="true"/>
 
     <application 
         android:allowBackup="true"
