--- a/Level/AndroidManifest.xml
+++ b/Level/AndroidManifest.xml
@@ -7,7 +7,7 @@
     
     <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="true"/>
 
-    <application android:allowBackup="true" android:debuggable="true" android:icon="@drawable/icon" android:label="@string/name">
+    <application android:allowBackup="true" android:debuggable="false" android:icon="@drawable/icon" android:label="@string/name">
     	
         <activity android:hardwareAccelerated="true" android:name=".Level" android:screenOrientation="portrait" android:theme="@style/Level.NoTitle">
             <intent-filter>
