--- a/Level/AndroidManifest.xml
+++ b/Level/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="preferExternal" android:versionCode="35" android:versionName="1.9.6" package="net.androgames.level">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="preferExternal" android:versionCode="36" android:versionName="1.9.7" package="net.androgames.level">
     
     <supports-screens android:anyDensity="true" android:largeScreens="true" android:normalScreens="true" android:smallScreens="true"/>
     
@@ -7,7 +7,7 @@
     
     <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="true"/>
 
-    <application android:allowBackup="true" android:debuggable="false" android:icon="@drawable/icon" android:label="@string/name">
+    <application android:allowBackup="true" android:debuggable="true" android:icon="@drawable/icon" android:label="@string/name">
     	
         <activity android:hardwareAccelerated="true" android:name=".Level" android:screenOrientation="portrait" android:theme="@style/Level.NoTitle">
             <intent-filter>
